# ETAP-AI-WORK-

./: .agents-coordination.md  .bandit  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks-baseline.json  .gitleaks.toml  .gitmodules  .hadolint.yaml  .mcp.json  .mcp.json.example  .npmrc  .pre-commit-config.yaml  .secrets.baseline  .sonarcloud.properties  .trivyignore  .trivyignore.yaml  .vercelignore  01-Release-Killers.md  02-Hidden-Bugs.md  03-Edge-Case-Validation.md  04-Runtime-Risks.md  05-Performance-Risks.md  06-Fixes-Applied.md  07-Final-Release-Assessment.md  404.html  AGENTS.md  AGENT_PROMPTS_AUDIT_REPORT.md  AI_AGENT_INDEX.md  API_DOCUMENTATION.md  API_Test_Collection.postman_collection.json  ARCHITECTURE.md  AUDIT_LOGGING_REPORT.md  AUDIT_REMEDIATION.md  BACKUP_RESTORE_REPORT.md  BIM_MULTI_DB_EXAMPLE.py  CAPACITY_PLAN.md  CERTIFICATE_OF_COMPLETION.md  (+195 more)
.claude/: settings.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.devcontainer.yml  post-create.sh  post-start.sh
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  REPOSITORY_OPTIMIZATION.md  SECRETS_SETUP.md  SECURITY.md  dependabot.yml
.kilo/: E2E_TESTING_PROTOCOL.md
.testsprite/: config.json
.vercel/: project.json
AGENT_ARCHITECTURE/: index.html
API_REFERENCE/: index.html
AR/: index.html
ARCHITECTURE/: index.html
AUDIT_LOGGING_REPORT/: index.html
AUDIT_REPORT/: index.html
BACKUP_RESTORE_REPORT/: index.html
CAPACITY_PLAN/: index.html
CERTIFICATE_OF_COMPLETION/: index.html
CI_CD_INTEGRATION/: index.html
COMPLIANCE/: index.html
COST_OPTIMIZATION_REPORT/: index.html
DELIVERABLES_SUMMARY/: index.html
DEVELOPER_GUIDE/: index.html
DISASTER_RECOVERY_PLAN/: index.html
DISASTER_RECOVERY_RUNBOOK/: index.html
ENTERPRISE_CERTIFICATION_REPORT/: index.html
ENTERPRISE_OPERATIONS_HANDBOOK/: index.html
ETAP_GUIDE_COMPLETION/: index.html
ETAP_GUIDE_INTEGRATION/: index.html
EXECUTIVE_SUMMARY/: index.html
FINAL_COMPLETION_REPORT/: index.html
IMPLEMENTATION_REPORT/: index.html
INCIDENT_RESPONSE_RUNBOOK/: index.html
ML_ENHANCEMENTS/: index.html
NODE_SANDBOX/: index.html
OPERATIONS_RISK_REGISTER/: index.html
OPERATIONS_RUNBOOK/: index.html
PRE_LAUNCH_TEST_REPORT/: index.html
PRODUCTION_READINESS_AUDIT/: index.html
README_AR/: index.html
SECURITY_OPERATIONS_MANUAL/: index.html
SINGLE_ENGINE_ARCHITECTURE_ENFORCEMENT_REPORT/: index.html
SLA_SLO_DOCUMENT/: index.html
SUMMARY_AR/: index.html
TEST_PLAN/: index.html
TROUBLESHOOTING_GUIDE/: index.html
acp_runtime/: README.md  pylock.toml  pyproject.toml
acp_runtime/acp/: __init__.py  __main__.py  cli.py  config.py  errors.py  health.py  http_server.py
acp_runtime/acp/observability/: __init__.py  metrics.py  structured_logger.py  tracer.py
acp_runtime/acp/router/: __init__.py  router.py  scope.py
acp_runtime/acp/runtime/: __init__.py  cancel.py  deadline.py  engine.py  handler.py  progress.py
acp_runtime/acp/schema/: __init__.py  capability.py  envelope.py  ids.py  params.py
acp_runtime/acp/security/: __init__.py  audit.py  auth.py
acp_runtime/acp/transport/: __init__.py  base.py  server.py  stdio.py  uds.py  websocket.py
acp_runtime/acp_tests/: _cli_bad_handler.py  conftest.py  test_cancellation.py  test_cli.py  test_config.py  test_deadline.py  test_engine.py  test_handler.py  test_health.py  test_http_server.py  test_integration.py  test_observability.py  test_router.py  test_schema.py  test_security.py  test_transport.py
acp_runtime/tests/: __init__.py  _cli_bad_handler.py  conftest.py  integration_handlers.py  test_cancellation.py  test_cli.py  test_config.py  test_deadline.py  test_engine.py  test_handler.py  test_health.py  test_http_server.py  test_integration.py  test_metrics_prometheus.py  test_observability.py  test_router.py  test_schema.py  test_security.py  test_transport.py
adapters/: pdf_to_rooms_adapter.py
adms_control/: __init__.py  adms_control.py
agents/: __init__.py  anomaly_agent.py  arc_flash_agent.py  battery_storage_agent.py  browser_cua_executor.py  cable_sizing_agent.py  code_guard_agent.py  coordination_agent.py  cua_executor.py  digital_twin_agent.py  earth_grid_agent.py  etap_expert_agent.py  etap_gui_agent.py  goal_planner_agent.py  life_safety.py  motor_starting_agent.py  orchestrator.py  predictive_agent.py  prompt_loader.py  renewable_agent.py  scada_agent.py  stability_agent.py  weather_agent.py
ai_context_engine/: document_ingestor.py  indexer.py  knowledge_graph.py  retriever.py  text_chunker.py
akamai/: DEPLOYMENT_GUIDE.md  api-protection-config.json  bot-manager-config.json  property.json  waf-custom-rules.json
alembic/: env.py
api/: __init__.py  _rate_limit.py  _test_mode.py  agents.py  ai_ml.py  akamai_protection.py  assets.py  auth.py  cloudflare_protection.py  context_engine.py  coverage_report.py  csrf.py  cua_confirmation_ws.py  data_import.py  database.py  dependencies.py  digital_twin.py  dual_control.py  email_dashboard.py  email_digest.py  email_otp.py  email_webhooks.py  equipment.py  error_debugger.py  export.py  feature_flags.py  health.py  magic_links.py  mfa.py  notifications.py  pe_stamp.py  projects.py  r2_storage.py  rbac.py  refactored_service.py  risk_scoring.py  routes.py  scada.py  security_audit.py  settings.py  (+6 more)
backend/: __init__.py  akamai_middleware.py  api_keys.py  app.py  audit_integrity_helper.py  auth.py  cloudflare_middleware.py  config.py  contract.py  database.py  db_models.py  db_service.py  limiter.py  models.py  multi_db_service.py  project_bridge.py  rbac.py  request_context.py  response.py  schemas.py  security_csrf.py  security_middleware.py
benchmarks/: benchmark-report.json  benchmark_suite.py  profile_state_store.py  run_b3_zbus.py  validate_slots.py  zbus_lu_comparison.json
cloudflare/: R2_SETUP.md  waf-rules.json  worker-r2.js  worker.js  wrangler-r2.toml  wrangler.toml
config/: promtail.yml
coordination/: __init__.py  coordination.py
core/: __init__.py  bootstrap.py  database.py  error_tracking.py  (+6 more)
(+1769 files in other folders)
