[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etap-ai-platform"
version = "2.1.0"
description = "Enterprise-grade autonomous engineering intelligence for validated power-system studies, ETAP automation, GIS enrichment, AI workflows, and production operations."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
keywords = ["power-system", "etap", "gis", "engineering", "ai", "load-flow", "short-circuit", "arc-flash"]

authors = [
    { name = "Eng. Ahmed Elbaz", email = "ahmdelbaz28@gmail.com" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "psutil>=5.8.0",
    "requests>=2.32.4",  # SECURITY: CVE-2024-35195, CVE-2024-47081
    "ezdxf>=1.3.0",
    "pyyaml>=6.0",
    "structlog>=21.0.0",
    "cryptography>=42.0.4",  # SECURITY: 9 CVEs fixed (CVE-2023-50782, CVE-2024-0727, GHSA-537c-gmf6-5ccf)
    "hvac>=2.0.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.6.0",
    "pydantic[email]>=2.0.0",
    "fastapi>=0.104.0",
    "tenacity>=8.2.0",
    "uvicorn[standard]>=0.24.0",
    "pypdf>=6.13.3",  # SECURITY: 30 CVEs fixed (replaces deprecated PyPDF2)
    "chromadb>=0.4.24",
    "sentence-transformers>=2.7.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "pdfplumber>=0.7.0",
    "nltk>=3.9.4",  # SECURITY: 13 CVEs fixed (PYSEC-2024-167 RCE, CVE-2026-33230/33231)
    "python-docx>=0.8.11",
    "openpyxl>=3.0.0",
    "reportlab>=3.6.0",
    "tqdm>=4.62.0",
    "beautifulsoup4>=4.10.0",
    "lxml>=6.1.0",  # SECURITY: PYSEC-2026-87 (XXE) fixed
    "typing-extensions>=4.0.0",
    "starlette>=0.40.0",  # SECURITY: CVE-2024-47874 (DoS), CVE-2025-54121 (memory leak)
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "celery>=5.3.0",
    "websockets>=11.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.6",
    "alembic>=1.13.0",
    "pyotp>=2.9.0",
    "neo4j>=5.0.0",
    "langchain-neo4j>=0.1.0",
    "langchain-experimental>=0.0.1",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "qdrant-client>=1.7.0",
    "langchain-qdrant>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
]
win32 = [
    "pywin32>=303",
    "pyautogui>=0.9.53",
    "opencv-python>=4.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "types-PyYAML>=6.0.0",
    "hypothesis>=6.92.0",
    "pre-commit>=3.6.0",
]

property-test = [
    "hypothesis>=6.92.0",
]

# Optional dependencies for ETAP and ArcGIS integration
etap = [
    "pywin32>=303; sys_platform == 'win32'",  # Required for ETAP COM automation on Windows
]

# ArcGIS integration extra.
# IMPORTANT: `arcpy` is ESRI's proprietary package — it is NOT on PyPI.
# It is bundled with ArcGIS Pro's Python on Windows only. Listing it as a
# pip dependency makes `pip install` / `uv lock` fail on every platform
# that doesn't have ArcGIS Pro installed (including Vercel, CI, HF Space,
# Docker).
# The codebase uses lazy imports (`import arcpy` inside functions) with
# graceful fallback (raises GISProviderUnavailableError), so the package
# is only needed at runtime on machines that actually have ArcGIS Pro.
# Users who have ArcGIS Pro will have `arcpy` available in their Python
# environment already — it does not need to be pip-installed.
# The [arcgis] extra is kept as a metadata placeholder for discoverability
# (so users know the integration exists) but installs no extra packages.
arcgis = []

# Combined optional dependencies
full = [
    "etap-ai-platform[etap,arcgis]",
]

[project.scripts]
etap-platform = "engineering_service:main"
etap-api = "uvicorn:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agents*",
    "core_model*",
    "engine*",
    "load_flow*",
    "fault_analysis*",
    "coordination*",
    "curves*",
    "relays*",
    "etap_integration*",
    "gis_integration*",
    "gis_model*",
    "gis_validation*",
    "gis_validation_electrical*",
    "gis_validation_real*",
    "digital_twin*",
    "security*",
    "reporting*",
    "visualization*",
    "network_solver*",
    "knowledge*",
    "scada_model*",
    "adms_control*",
    "acp_runtime*",
    "backend*",
    "core*",
    "skills*",
]

[tool.pytest.ini_options]
testpaths = ["tests",     "acp_runtime/acp_tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py", "unit_tests.py"]
addopts = "-v --tb=short -x"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "regression: marks tests as regression tests",
    "unit: marks tests as unit tests",
    "timeout: marks tests with a timeout limit",
]

[tool.coverage.run]
source = [
    "agents",
    "core_model",
    "engine",
    "load_flow",
    "fault_analysis",
    "coordination",
    "curves",
    "relays",
    "etap_integration",
    "gis_integration",
    "digital_twin",
    "security",
    "reporting",
    "visualization",
    "backend",
    "core",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def __repr__",
    "def __str__",
]

[tool.pyright]
include = ["."]
extraPaths = ["."]

[tool.pyrefly]
include = ["."]
extraPaths = ["."]
