[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-runtime"
version = "0.1.0"
description = "Agent Communication Protocol — Runtime Engine (Phase B)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "anyio>=4.4",
    "pydantic>=2.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "anyio>=4.0",
    "pyyaml>=6.0",
]
websocket = [
    "websockets>=12.0",
]

[project.scripts]
acp = "acp.cli:main"
acp-cli = "acp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["acp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
